2009-06-26  higepon  <higepon@users.sourceforge.jp>

        * test/test.bat: (mosh conncurrent) works on Windows! Yey.

        * lib/mosh/ffi.ss (find-shared-library): Fixed type thanks to mrc.mgg.

2009-06-25  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/file.ss (mosh): Added.

2009-06-24  higepon  <higepon@users.sourceforge.jp>

        * Added follows, not exported yet.
            create-directory
            delete-directory
            rename-file
            create-symbolic-link
            file-directory?
            file-symbolic-link?
            file-regular?
            file-readable?
            file-executable?
            file-writable?
            file-size-in-bytes
            file-stat-mtime
            file-stat-atime
            file-stat-ctime

        * OSCompat.cpp : Added changeTime, accessTime and modifyTime.

        * OSCompatThread.h (scheme): Rewrote Conditional Variables on Windows.

2009-06-23  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (adjust-arglist): Improved error message of named let.

        * lib/mosh/concurrent.ss: Fixed receive-internal.

2009-06-22  higepon  <higepon@users.sourceforge.jp>

        * Added createDirectory, deleteFileOrDirectory, isDirectory, renameFile, isExecutable, isRegular, isSymbolicLink
                createSymbolicLink.

2009-06-19  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h (scheme): Added Thread for Windows (not working).

2009-06-18  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp : Uses FlonumUtil::flonumToUcs4String for display/write.

        * UtilityProcedures.cpp : Uses FlonumUtil::flonumToUcs4String for number->string.

        * Arithmetic.h : Added FlonumUtil for reading/writing flonum.

2009-06-17  higepon  <higepon@users.sourceforge.jp>

        * ListProcedures.cpp : Added vector-set!, vector-ref, vector-length and make-vector. Thanks to mrc.mgg.

2009-06-16  higepon  <higepon@users.sourceforge.jp>