@@ -1,3 +1,7 @@
+2009-06-27  higepon  <higepon@users.sourceforge.jp>
+
+        * FFI.h : Added Pointer class for new FFI.
+
 2009-06-26  higepon  <higepon@users.sourceforge.jp>
 
         * test/test.bat: (mosh conncurrent) works on Windows! Yey.
